<resources>
    <string name="app_name">CaseAR</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="contact"><![CDATA[<a href=\"mailto:fiona.draxler@ifi.lmu.de\">Send an email</a>]]></string>
    <string name="privacy">The Case AR app requires the Android permission CAMERA in order to show a camera preview and to perform object detection. All computations are performed on the device itself. We do not store the camera data or any other personal data and we do not transfer them to any other location.</string>
    <string name="close">Close</string>
    <string name="privacyTitle">Data Privacy Statement</string>
    <string name="contactTitle">Help and Contact</string>
    <string name="info_title">Info</string>
    <string name="camera">Camera</string>
    <string name="history_title">History</string>
    <string name="error_quiz_creation">Error while creating quiz</string>
    <string name="history_detail_title">Sentence Details</string>
    <string name="empty_history_explanation">No sentences found. Tap on object labels in the Camera view to get started.</string>
    <string name="show_answer">Show answer</string>
    <string name="start">Start</string>
    <string name="preferences_title">Settings</string>
    <string name="settings">Settings</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Wrong answer</string>
</resources>